[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Weapon/Beam.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Samus/zm_power_suit.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hitboxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 0.0666667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0333333, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 9.0

[node name="Beam" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
vframes = 30
hframes = 25
frame = 3

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.22
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Shoot"
anims/Shoot = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 2147483660

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
